<resources>
    <string name="app_name">eCourier Agent Apps</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="version">VERSION 1.0.5 BETA (BUILD 021117)</string>
    <string name="prompt_user_info">Enter your basic info to get started.</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="user_type">User Type:</string>
    <string name="user_agent">Agent</string>
    <string name="user_admin">Admin</string>
    <string name="button_submit">Submit</string>
    <string name="get_started">GET STARTED</string>
    <string name="view_pager_item_one">eCourier.com.bd is a bicycle based courier service in Dhaka, Bangladesh. eCourier can transport all sorts of documents and parcels from here and there to clients and customers with ultimate delivery solution.</string>
    <string name="view_pager_item_two">eCourier.com.bd\'s mission is to provide expedient delivery services to its clients and customers with an environmentally friendly way. Plus, we are providing the specialized and premium postal services to our valuable customers with digital tracking system.</string>
    <string name="view_pager_item_three">To create a complete customer friendly service-based company whose primary priority is to fulfill customer\'s demands and expectations.</string>

    <!-- navigation drawer item labels  starts -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_consignment_list">Order List</string>
    <string name="nav_item_title_reports">Reports</string>
    <!-- <string name="nav_item_check_update">Check for Updates</string>-->
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_logout">Logout</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_consignment_list</item>
        <item>@string/nav_item_title_reports</item>
        <!--<item>@string/nav_item_check_update</item>-->
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_consignment_list">Consignment List</string>
    <string name="title_reports">Reports</string>
    <string name="title_profile">Profile</string>
    <!--<string name="title_check_update">Check for Updates</string>-->
    <string name="title_logout">Logout</string>
    <!-- navigation drawer item labels  ends -->

    <string name="admin">Admin</string>
    <string name="agent">Agent</string>
    <string name="empty_field">Empty Field!</string>
    <string name="button_login">LOGIN</string>
    <string name="welcome_messages">Hello, %1$s</string>
    <string name="total_parcel">&lt;b>%1$d &lt;/b></string>
    <string name="total_parcel_text">Total Parcel: %1$s</string>
    <string name="total_delivered">&lt;b>%1$d &lt;/b></string>
    <string name="total_parcel_price_text">Total Price: %1$s</string>
    <string name="total_delivered_text">Total Delivered: %1$s</string>
    <string name="total_cost">TOTAL COST: &lt;b>%1$d &lt;/b></string>
    <string name="total_processing">&lt;b>%1$d &lt;/b></string>
    <string name="total_cancelled">&lt;b>%1$d &lt;/b></string>
    <string name="total_price">&lt;b>%1$d &lt;/b></string>
    <string name="title_activity_activity_consignment_details">ActivityConsignmentDetails</string>
    <string name="consignment_id">Consignment ID: %1$s</string>
    <string name="sender_group">Sender Group: %1$s</string>
    <string name="eso">ESO: %1$s</string>
    <string name="agent_name">Agent: %1$s</string>
    <string name="company">Company: %1$s</string>
    <string name="contact">Contact: %1$s</string>
    <string name="product_id">Product ID: %1$s</string>
    <string name="product_price">Product Price: %1$s</string>
    <string name="recipient_name">Recipient Name: %1$s</string>
    <string name="recipient_mobile">Recipient Mobile: %1$s</string>
    <string name="recipient_address">Recipient Address: %1$s</string>
    <string name="recipient_area">Recipient Area: %1$s</string>
    <string name="order_time">Order Time: %1$s</string>
    <string name="parcel_status">Parcel Status: %1$s</string>
    <string name="shipping_price">Shipping Price: %1$s</string>
    <string name="cod_price">COD Price: %1$s</string>
    <string name="payment_method">Payment Method: %1$s</string>
    <string name="pacel_id">Parcel ID: %1$s</string>
    <string name="payment_clear">Payment Clear: %1$s</string>
    <string name="comments">Comment: %1$s</string>
    <string name="text_total_delivered">DELIVERED</string>
    <string name="text_total_parcel">PARCEL</string>
    <string name="copyright">Copyright eCourier Ltd.</string>
    <string name="search_here">Search Here</string>
    <string name="mobile_no">Mobile No</string>
    <string name="product_id_no">Product ID</string>
    <string name="button_search">SEARCH</string>
    <string name="button_update">UPDATE</string>
    <string name="title_activity_report_details">ReportDetailsActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="search_to">TO:</string>
    <string name="search_from">FROM:</string>
    <string name="loading">Loading...</string>
    <string name="no_new_notification">No notification available.</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="text_total_processing">PROCESSING</string>
    <string name="text_total_cancelled">CANCELLED</string>
    <string name="hint_swipe_to_confirm">(swipe left to dismiss a notification, swipe again to confirm the task has been completed)</string>
    <string name="hint_swipe_to_dismiss">(task was dismissed)</string>
    <string name="noticiation_count">0</string>
    <string name="exit_title">Exit the app?</string>
    <string name="exit_confirmation">Would you like to exit the application?</string>
    <string name="title_check_version">Check for Update</string>
    <string name="checking_for_update">Checking for new updates...</string>
    <string name="no_update_available">You phone already has the latest version of application.</string>
    <string name="button_save">SAVE</string>
    <string name="button_rate">RATE</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="error_failed">Failed!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="error_unknown">Unknown error!</string>
</resources>
