<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Prokash Sarkar 2015. Contact, prokashsarkar@outlook.com.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cloud_white"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:gravity="center"
            android:hint="@string/search_here"
            android:padding="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:gravity="center"
            android:hint="@string/mobile_no"
            android:padding="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:gravity="center"
            android:hint="@string/product_id_no"
            android:padding="7dp" />

        <Button
            android:id="@+id/btnSubmit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@color/colorAccent"
            android:text="@string/button_search"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>