<!--
  ~ Copyright (c) Prokash Sarkar 2015. Contact, prokashsarkar@outlook.com.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ps.ecourier.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_linear_gradient"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <include layout="@layout/header_logo_white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutHeader"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent_white"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="7dp"
                android:text="" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:hint="@string/user_password"
                android:text=""
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="7dp" />

            <Button
                android:id="@+id/btnSubmit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@color/colorAccent"
                android:text="@string/button_login"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/copyright"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
